# svi_mapper

./: CMakeLists.txt  cmake_variables.txt  readme.txt  variables.txt
hardware_parameters/: kitti_00_camera_left.txt  kitti_00_camera_right.txt  kitti_11_12_camera_left.txt  kitti_11_12_camera_right.txt  vi_sensor_camera_left.txt  vi_sensor_camera_right.txt
src/core/: CFundamentalMatcher.cpp  CFundamentalMatcher.h  CMapper.cpp  CMapper.h  CTrackerGT.cpp  CTrackerGT.h  CTrackerSV.cpp  CTrackerSV.h  CTrackerSVI.cpp  CTrackerSVI.h  CTrackerStereo.cpp  CTrackerStereo.h  CTriangulator.cpp  CTriangulator.h
src/exceptions/: CExceptionDetectionFailed.h  CExceptionParameter.h  CExceptionZeroDisparity.h
src/gui/: CViewerBTree.cpp  CViewerBTree.h  CViewerCloud.cpp  CViewerCloud.h  CViewerScene.cpp  gt_tracking_context_viewer.cpp  gt_tracking_context_viewer.h  opengl_primitives.cpp  opengl_primitives.h  simple_viewer.cpp  simple_viewer.h
src/optimization/: CSolverStereoPosit.cpp  CSolverStereoPosit.h  Cg2oOptimizer.cpp  Cg2oOptimizer.h  G2oEdges.cpp  edge_se3_linear_acceleration.cpp  edge_se3_linear_acceleration.h
src/parallelization/: CTypesThreading.h
src/runnable/: compute_descriptors_holidays.cpp  create_cloud.cpp  create_vocabulary_dbow2.cpp  match_clouds.cpp  match_clouds_holidays.cpp  republisher_kitti.cpp  stereo_fps.cpp  test_cloud_matching.cpp  tracker_gt.cpp  tracker_sv.cpp  tracker_svi.cpp  triangulation_sampling.cpp  validate_dataset.cpp
src/types/: CBITree.h  CBNode.h  CBPITree.h  CBPNode.h  CBPTree.h  CBRIEFNode.h  CBTree.h  CDescriptorBRIEF.h  CKeyFrame.cpp  CKeyFrame.h  CLandmark.cpp  CLandmark.h  CPDescriptorBRIEF.h  CTypesThreading.h  Typedefs.h  Types.h  TypesCloud.h
src/utility/: CIMUInterpolator.cpp  CIMUInterpolator.h  CLogger.cpp  CLogger.h  CParameterBase.h  CTimer.h  CWrapperOpenCV.h
src/vision/: CBTreeMatcher.h  CMiniVisionToolbox.cpp  CPinholeCamera.h  CPinholeCameraIMU.h  CStereoCamera.h  CStereoCameraIMU.h
